--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,53 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
+astroid==2.15.6
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+contourpy==1.1.0
+cycler==0.11.0
+dill==0.3.7
+exceptiongroup==1.1.3
 Flask==2.3.2
+fonttools==4.42.1
+gunicorn==21.2.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
+iniconfig==2.0.0
+isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.5
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+mccabe==0.7.0
 nltk==3.8.1
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.3
+Pillow==10.0.0
+platformdirs==3.10.0
+pluggy==1.3.0
 pylint==2.17.5
+pyparsing==3.0.9
 pytest==7.4.0
+python-dateutil==2.8.2
+pytz==2023.3
+regex==2023.8.8
 requests==2.31.0
+scikit-learn==1.3.0
+scipy==1.11.2
+seaborn==0.12.2
+six==1.16.0
+threadpoolctl==3.2.0
+tomli==2.0.1
+tomlkit==0.12.1
+tqdm==4.66.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+Werkzeug==2.3.7
+wrapt==1.15.0
+zipp==3.16.2
